Fix: Project Section fixed on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -580,7 +580,7 @@ header .header-btn {
 
 .projects .prj-img img {
     width: 100%;
-    height: 100%;
+    height: 120%;
     border-radius: 20px;
     transition: all 0.3s;
     object-fit: cover;
